# module1

./: .gitignore  README.md  dist.env  pyproject.toml
.run/: start Django.run.xml
apps/startup/: apps.py  startup.py
config/: __init__.py  settings.py  wsgi.py
docs/: crete_apps.md  readme.md
scripts/: delete-all-python.bat  install-python.ps1  settings.ps1
